# llm-playground

./: .gitignore  README.md  pyproject.toml
document-processing/: multimodal_embedding.ipynb  table_detection.ipynb
fun-apps/live-wallpaper/: main.py  requirements.txt
fun-apps/live-wallpaper/src/: scene.py  sprite.py
fun-apps/live-wallpaper/tools/: fix_transparency.py
fun-apps/mini-k8s-project/: README.md  RESILIENCE-TEST.md
fun-apps/mini-k8s-project/app/: Dockerfile  api.py  worker.py
fun-apps/mini-k8s-project/k8s/: api-deployment.yaml  ingress.yaml  postgres.yaml  redis.yaml  resource-quota.yaml  worker-deployment.yaml
fun-apps/paw-rfect-christmas/: App.tsx  README.md  constants.ts  index.html  metadata.json  package-lock.json  package.json  types.ts  vite.config.ts
fun-apps/paw-rfect-christmas/components/: EditorControls.tsx  Header.tsx  ImageUploader.tsx  ResultDisplay.tsx
fun-apps/paw-rfect-christmas/services/: geminiService.ts
video-processing/: .env.template  .gitignore  ARCHITECTURE.md  README.md  gpu_check.py  make_test_video.py  pyproject.toml  vss.py
video-processing/prompts/: NOTICE.md  caption.txt  map_summarize.txt  qa_answer.txt  question_transform.txt  reduce_summarize.txt
video-processing/src/: __init__.py  benchmark.py  carag.py  config.py  frames.py  gemini.py  pipeline_local.py  pipeline_native.py  profiling.py  runner.py  vectorstore.py
