[project]
name = "video-processing"
version = "0.1.0"
description = "VSS-inspired video summarization + multi-turn Q&A — Gemini inference, local preprocessing, per-stage profiling"
requires-python = ">=3.10"
dependencies = [
    # --- core ---
    "google-genai>=1.55.0",   # Gemini VLM + LLM + embeddings
    "pydantic>=2.10",
    "pillow>=10.0",
    "numpy>=1.26",
    "python-dotenv>=1.0",
    "rich>=13.0",             # profile tables
    # --- video decode (CPU) ---
    "av>=12.0",               # PyAV: precise seek/decode, bundles ffmpeg
    "opencv-python>=4.9",     # fallback decode + Laplacian sharpness
    # --- frame selection ---
    "scenedetect>=0.6.4",     # AdaptiveDetector / ContentDetector (scene sampling)
    "imagehash>=4.3",         # perceptual-hash near-duplicate dedup
    # --- retrieval (Arm B Q&A) ---
    "faiss-cpu>=1.8",         # optional; numpy brute-force fallback if import fails
]

# This is an application, not a library — uv manages the env without building/installing it.
[tool.uv]
package = false

# =====================================================================
# GPU deps (RTX 5090 / Blackwell sm_120) are deliberately NOT declared here
# (also not as an optional extra): torch's CUDA wheels live on a custom
# index with no macOS build — declaring them would break `uv sync` on the
# Mac. Install them manually on the 5090 box, into this project's venv:
#
#   uv pip install torch torchcodec --index-url https://download.pytorch.org/whl/cu130
#   uv pip install transnetv2-pytorch
#
# torchcodec must be >= 0.14 (cu130): the cu128-era 0.11 + nvidia-npp-cu12
# stack SILENTLY returns garbage frames from device="cuda". An NVDEC-enabled
# FFmpeg must be staged in .venv/lib/ffmpeg/ (Ubuntu's system build lacks
# NVDEC) — see README "GPU" section. Needed only for `--decoder gpu` /
# `--sampling transnet`. GOTCHA: a plain `uv sync` PRUNES these wheels —
# re-install after any sync, or use `uv sync --inexact`. (`uv run` is safe.)
# =====================================================================
